# elk-cli

./: CONTRIBUTING.md  README.md  config.example.toml  pyproject.toml
src/elk_tool/: __about__.py  __init__.py
src/elk_tool/core/: __init__.py  client.py  config.py  credentials.py  exceptions.py
src/elk_tool/domain/: __init__.py  cluster.py  documents.py  logs.py  queries.py
src/elk_tool/infrastructure/: __init__.py  logging.py  monitoring.py  utils.py
src/elk_tool/presentation/: __init__.py  formatters.py  output.py  prompts.py
src/elk_tool/testing/: __init__.py  commands.py
src/elk_tool/ui/: __init__.py  cli.py
src/elk_tool/ui/commands/: config.py
tests/: README.md  conftest.py  test_cli_basic.py  test_cli_commands.py  test_cli_documents.py  test_cli_format.py  test_client.py  test_config_commands.py  test_credentials.py  test_exceptions.py  test_logging.py  test_mapping_utils.py  test_monitoring.py
